fixing css z-indexes and typahead hiding on escape key

--- a/client/smarks.less
+++ b/client/smarks.less
@@ -255,6 +255,7 @@ a:hover{
     padding:3px @boxPadding 5px;
     width:100%;
     font-size:12px;
+    z-index:2;
     
 }
 
@@ -280,14 +281,14 @@ a:hover{
 //**/
 
 ul.typeahead {
-    z-index:2050;
+    z-index:11;
 }
 
 #taggingSystem
 {
     margin-top:-3px;
     left:@boxWidth - @tagsysBoxWidth + 5px;
-    z-index:2000;
+    z-index:10;
     padding:@tagsysPadding @tagsysPadding @tagsysPadding/2 @tagsysPadding;
     background: none repeat scroll 0 0 #FFFFFF;
     border: 1px solid @colorInfo;
